[ 11/22/24 ]
New and working alert system.
- Saves collapse of system and message.
- Right click to hide system for rest of session (per Lua load).
- Shows items in changeLog per mod.
[ ------ ]

[ 11/22/24 #2 ]
- Shifted UI for collapsed alert over a bit.
- Added message-header to translatable text.
[ ------ ]

[ 11/24/24 ]
- Fixes edge case with update logs.
[ ------ ]

[ 12/20/24 ]
- Fix edge case with alert display.
[ ------ ]

[ 12/23/24 ]
- Fixed issues with B41/B42 not able to mutually read change logs.
- Moved changelog's placement into `common`.
[ ------ ]

[ 12/23/24 hotfix #1 ]
- Fixed issue with hiding the system.
[ ------ ]

[ 12/30/24 ]
- Fixed issue with un-collapsing sometimes not respecting the dropMessage's status.
[ ------ ]

[ Remaster for B42 ]
- Remastered the UI to be more streamlined based on feedback.
- No longer includes a separate alert system and drop message.
- Fixed new alerts warning.
[ ------ ]